[gd_scene load_steps=14 format=3 uid="uid://d4c1rk3pk616a"]

[ext_resource type="Script" path="res://Scripts/mech_builder.gd" id="1_e2epo"]
[ext_resource type="Script" path="res://Scripts/tab_bar.gd" id="2_8u48r"]
[ext_resource type="Script" path="res://Scripts/Grid Container Scripts/HeadContainer.gd" id="2_uci0b"]
[ext_resource type="Script" path="res://Scripts/Grid Container Scripts/BodyContainer.gd" id="3_3sunk"]
[ext_resource type="Script" path="res://Scripts/frame_selector.gd" id="4_kaslm"]
[ext_resource type="Script" path="res://Scripts/Grid Container Scripts/LeftArmContainer.gd" id="4_msdhg"]
[ext_resource type="Script" path="res://Scripts/Grid Container Scripts/RightArmContainer.gd" id="5_ikcqh"]
[ext_resource type="Script" path="res://Scripts/Grid Container Scripts/LegsContainer.gd" id="6_r7v1r"]
[ext_resource type="Script" path="res://Scripts/stats_list.gd" id="9_34ety"]
[ext_resource type="Script" path="res://Scripts/gear_ability.gd" id="9_dxgnc"]
[ext_resource type="Script" path="res://Scripts/item_inventory.gd" id="9_xydw1"]
[ext_resource type="Script" path="res://Scripts/background_selector.gd" id="11_enoln"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6m6hc"]

[node name="MechLayout" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 1612.0
offset_bottom = 1080.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="PartMenu" type="ColorRect" parent="HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
color = Color(0.215686, 0.215686, 0.215686, 1)

[node name="ItemInventory" type="VBoxContainer" parent="HBoxContainer/HBoxContainer/PartMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
script = ExtResource("9_xydw1")

[node name="TabBar" type="TabBar" parent="HBoxContainer/HBoxContainer/PartMenu/ItemInventory"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
script = ExtResource("2_8u48r")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HBoxContainer/PartMenu/ItemInventory"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Top Spacer" type="Control" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MechBuilder" type="ColorRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1000, 800)
layout_mode = 2
size_flags_vertical = 0
color = Color(0.0823529, 0.109804, 0.294118, 1)
script = ExtResource("1_e2epo")

[node name="Header" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 9.0
offset_right = -8.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/Header"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/Header/VBoxContainer"]
layout_mode = 2
text = "  Gear:
"

[node name="FrameSelector" type="OptionButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/Header/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("4_kaslm")

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/Header"]
custom_minimum_size = Vector2(300, 20)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "test
"

[node name="UnlockToggle" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/Header"]
custom_minimum_size = Vector2(90, 30)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
text = "Unlock
Hardpoints
"

[node name="ContainerContainer" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 232.0
offset_top = 168.0
offset_right = -170.0
offset_bottom = -142.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeadContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/ContainerContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_right = 45.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 3
script = ExtResource("2_uci0b")
capacity = 9

[node name="ChestContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/ContainerContainer"]
material = SubResource("ShaderMaterial_6m6hc")
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -135.0
offset_right = 90.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 6
script = ExtResource("3_3sunk")
capacity = 36

[node name="LeftArmContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/ContainerContainer"]
custom_minimum_size = Vector2(180, 90)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -135.0
offset_right = 180.0
offset_bottom = -45.0
grow_vertical = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 6
script = ExtResource("4_msdhg")
capacity = 18

[node name="RightArmContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/ContainerContainer"]
custom_minimum_size = Vector2(180, 90)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -135.0
offset_bottom = -45.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 6
script = ExtResource("5_ikcqh")
capacity = 18

[node name="LegContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/ContainerContainer"]
custom_minimum_size = Vector2(90, 180)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -180.0
offset_right = 45.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 3
script = ExtResource("6_r7v1r")
capacity = 18

[node name="GearAbility" type="ColorRect" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/ContainerContainer"]
custom_minimum_size = Vector2(190, 130)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0183946
anchor_top = 0.671735
anchor_right = 0.0150502
anchor_bottom = 0.741122
offset_top = -0.149994
offset_right = 190.0
offset_bottom = 129.85
color = Color(0.215686, 0.215686, 0.215686, 1)
script = ExtResource("9_dxgnc")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/ContainerContainer/GearAbility"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 8.0
offset_right = -6.99998
offset_bottom = 0.000366211
grow_horizontal = 2
grow_vertical = 2

[node name="GearAbilityLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/ContainerContainer/GearAbility/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Gear Ability:
"
horizontal_alignment = 1

[node name="GearAbilityText" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/ContainerContainer/GearAbility/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 14
autowrap_mode = 2

[node name="Stats Spacer" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Background:
"

[node name="BackgroundSelector" type="OptionButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
script = ExtResource("11_enoln")

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Stats" type="ColorRect" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 500)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.215686, 0.215686, 0.215686, 1)

[node name="StatsList" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Stats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
script = ExtResource("9_34ety")

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="tab_changed" from="HBoxContainer/HBoxContainer/PartMenu/ItemInventory/TabBar" to="HBoxContainer/HBoxContainer/PartMenu/ItemInventory/TabBar" method="_on_tab_changed"]
[connection signal="tab_chosen" from="HBoxContainer/HBoxContainer/PartMenu/ItemInventory/TabBar" to="HBoxContainer/HBoxContainer/PartMenu/ItemInventory" method="_on_tab_bar_tab_chosen"]
[connection signal="item_installed" from="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder" to="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Stats/StatsList" method="_on_mech_builder_item_installed"]
[connection signal="item_removed" from="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder" to="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Stats/StatsList" method="_on_mech_builder_item_removed"]
[connection signal="set_gear_ability" from="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder" to="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/ContainerContainer/GearAbility" method="_on_mech_builder_set_gear_ability"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/Header/VBoxContainer/FrameSelector" to="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/Header/VBoxContainer/FrameSelector" method="_on_item_selected"]
[connection signal="load_frame" from="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/Header/VBoxContainer/FrameSelector" to="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder" method="_on_frame_chooser_load_frame"]
[connection signal="load_frame" from="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/Header/VBoxContainer/FrameSelector" to="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Stats/StatsList" method="_on_frame_chooser_load_frame"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/Header/Button" to="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder" method="_on_button_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder/Header/UnlockToggle" to="HBoxContainer/VBoxContainer/HBoxContainer/MechBuilder" method="_on_unlock_toggle_button_down"]
